# TrendAnalyzes

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
src/: README.md  main.rs
src/analyze-api/: Cargo.toml
src/analyze-api/src/: controller.rs  main.rs  routes.rs  service.rs
src/analyze-api/src/client/: analyzer_service_client.rs
src/analyze-api/src/handlers/: analyzer_service.rs
src/analyzer_service/: Cargo.toml
src/analyzer_service/src/: main.rs  model.rs  routes.rs
src/analyzer_service/src/handlers/: analyzer_service.rs
src/api-gateway/: Cargo.toml
src/api-gateway/src/: main.rs  model.rs  routes.rs
src/api-gateway/src/clients/: analyze_api_client.rs  analyze_client.rs  analyze_service_client.rs  trend_client.rs
src/api-gateway/src/handlers/: analyzer.rs  analyzer_api.rs  error.rs  trend.rs
