[package]
name = "analyzer_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8.9"

# Runtime async
tokio = { version = "1", features = ["full"] }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (para chamar o Analyzer Service)
reqwest = { version = "0.13", features = ["json"] }

# Swagger / OpenAPI
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
