[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.13", features = ["json"] }

utoipa = "5.5.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
